# rcross

./: .gitignore  Cargo.toml  meson.build  org.gnome.Example.json
build-aux/: cargo_wrapper.py
data/: meson.build  org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml
data/icons/: meson.build
po/: meson.build
src/: application.rs  main.rs  meson.build  window.rs  window.ui
